gcc/testsuite/gdc.test/runnable/ice10857.d
// EXTRA_SOURCES: imports/ice10857a.d imports/ice10857b.d

import imports.ice10857a;
