gcc/testsuite/gdc.test/fail_compilation/fail356a.d
import imports.fail356;
int imports; // collides with package name
